[package]
name = "rusted_cypher"
version = "1.1.0"
edition = "2018"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
description = "Send cypher queries to a neo4j database"
repository = "https://github.com/livioribeiro/rusted-cypher"
documentation = "https://docs.rs/rusted_cypher/"
readme = "README.md"
categories = ["database"]
keywords = ["neo4j", "database", "rest", "cypher", "graph"]
license = "MIT/Apache-2.0"
include = [
  "src/**/*",
  "build.rs",
  "Cargo.toml",
  "LICENSE-*",
  "README.md",
  "CHANGELOG.md",
]

[dependencies]
hyper = { git = "https://github.com/hyperium/hyper", rev = "4920f5e264c57f87dc8b91e7ed9a575359cc093c" }
hyper-tls= { git = "https://github.com/hobofan/hyper-tls", rev = "b00cdf581f91910369f15c293d2cf129609c3b24" }
futures-preview = { version = "0.3.0-alpha.17" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
semver = "0.5"
time = "0.1"
quick-error = "1.1"
log = "0.3"
headers = "0.2.1"
url = "1.7.2"
bytes = "0.4.12"
tokio = "0.2.0-alpha.2"
