[package]
name = "rusted_cypher"
version = "1.1.0"
edition = "2018"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
description = "Send cypher queries to a neo4j database"
repository = "https://github.com/livioribeiro/rusted-cypher"
documentation = "https://docs.rs/rusted_cypher/"
readme = "README.md"
categories = ["database"]
keywords = ["neo4j", "database", "rest", "cypher", "graph"]
license = "MIT/Apache-2.0"
include = [
  "src/**/*",
  "build.rs",
  "Cargo.toml",
  "LICENSE-*",
  "README.md",
  "CHANGELOG.md",
]

[dependencies]
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
hyper-tls= "0.4.0-alpha.4"
futures-preview = "0.3.0-alpha.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
semver = "0.5"
time = "0.1"
quick-error = "1.1"
log = "0.3"
headers = "0.2.1"
url = "1.7.2"
bytes = "0.4.12"
tokio = "0.2.0-alpha.6"
