[package]
name = "rusted_cypher"
version = "1.1.0"
edition = "2018"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
description = "Send cypher queries to a neo4j database"
repository = "https://github.com/livioribeiro/rusted-cypher"
documentation = "https://docs.rs/rusted_cypher/"
readme = "README.md"
categories = ["database"]
keywords = ["neo4j", "database", "rest", "cypher", "graph"]
license = "MIT/Apache-2.0"
include = [
  "src/**/*",
  "build.rs",
  "Cargo.toml",
  "LICENSE-*",
  "README.md",
  "CHANGELOG.md",
]

[dependencies]
hyper = "0.13.0"
hyper-tls= "0.4.0"
futures = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
semver = "0.5"
time = "0.1"
quick-error = "1.1"
log = "0.3"
headers = "0.3.0"
url = "1.7.2"
tokio = "0.2.0"
